name:                th-pprint
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.TH.Lens
                     , Language.Haskell.TH.Cleanup
                     , Language.Haskell.TH.Cleanup.Rules
  build-depends:       base
                     , lens
                     , pretty
                     , template-haskell
  default-language:    Haskell2010
